--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ google-generativeai
 langchain_google_genai
 streamlit
 langchain
+langchain_pinecone
 langchain_community
 python-dotenv
 google.generativeai
 sentence-transformers
 pinecone
+Flask
