--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 google-generativeai
 langchain_google_genai
 streamlit
-langchain
-langchain_core
-langchain_pinecone
-langchain_community
+langchain==0.2.1
+langchain-community==0.2.1
+langchain-core==0.2.1
+langchain-google-genai==1.0.5
+langchain-pinecone==0.1.1
+langchain-text-splitters==0.2.0
 python-dotenv
 google.generativeai
 sentence-transformers
