--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,130 @@
-google-generativeai
-langchain_google_genai
-streamlit
-langchain==0.2.1
-langchain-community==0.2.1
-langchain-core==0.2.1
-langchain-google-genai==1.0.5
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+attrs==23.2.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
+et-xmlfile==1.1.0
+filelock==3.15.1
+Flask==3.0.3
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.6.0
+gitdb==4.0.11
+GitPython==3.1.41
+google-ai-generativelanguage==0.6.4
+google-api-core==2.19.0
+google-api-python-client==2.133.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.4
+googleapis-common-protos==1.63.1
+greenlet==3.0.3
+grpcio==1.64.1
+grpcio-status==1.62.2
+httplib2==0.22.0
+huggingface-hub==0.23.3
+humanfriendly==10.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+langchain==0.2.3
+langchain-community==0.2.4
+langchain-core==0.2.5
+langchain-google-genai==1.0.6
 langchain-pinecone==0.1.1
-langchain-text-splitters==0.2.0
-python-dotenv
-google.generativeai
-sentence-transformers
-pinecone
-pillow
-pypdf
-flask
-openpyxl
-rapidocr-onnxruntime
-tenacity
-asyncio
-
-
-
+langchain-text-splitters==0.2.1
+langsmith==0.1.77
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
+onnxruntime==1.18.0
+opencv-python==4.10.0.82
+openpyxl==3.1.4
+orjson==3.10.4
+packaging==23.2
+pandas==2.2.2
+pillow==10.3.0
+pinecone==4.0.0
+pinecone-client==3.2.2
+proto-plus==1.23.0
+protobuf==4.25.3
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyclipper==1.3.0.post5
+pydantic==2.7.4
+pydantic_core==2.18.4
+pydeck==0.9.1
+Pygments==2.18.0
+pyngrok==7.1.6
+pyparsing==3.1.2
+pypdf==4.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+rapidocr-onnxruntime==1.3.22
+referencing==0.35.1
+regex==2024.5.15
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+safetensors==0.4.3
+scikit-learn==1.5.0
+scipy==1.13.1
+sentence-transformers==3.0.1
+shapely==2.0.4
+six==1.16.0
+smmap==5.0.1
+SQLAlchemy==2.0.30
+streamlit==1.35.0
+sympy==1.12.1
+tenacity==8.3.0
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.3.1
+tornado==6.4.1
+tqdm==4.66.4
+transformers==4.41.2
+triton==2.3.1
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.1
+watchdog==4.0.1
+Werkzeug==3.0.3
+yarl==1.9.4
