--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ google.generativeai
 streamlit
 langchain==0.2.1
 python-dotenv
-langchain-google-genai
-langchain-core
+langchain_google_genai
+langchain_core
