--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 google.generativeai
 streamlit
-langchain==0.2.1
+langchain==0.2.3
 python-dotenv
-langchain_google_genai
-langchain_core
+langchain_google_genai == 1.0.6 
+langchain-core== 0.2.3
+langchain-community == 0.2.4
